# phonon-xine

./: CMakeLists.txt
cmake/: FindXine.cmake
ds9/: ds9.desktop
gstreamer/: gstreamer.desktop
phonon/experimental/videocapturedevice/videocapturetestapp/: videocapturetestapp.desktop
xine/: CMakeLists.txt  kequalizer_plugin.cpp  mediaobject.cpp  xine.desktop  xine.desktop.cmake
